Minified version (every byte is sacred!). Test case using it accordingly...

--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -3,7 +3,7 @@
 <head>
     <title>Hello World</title>
     <meta charset="utf-8"/>
-    <script src="../lib/index.js"></script>
+    <script src="../lib/index.min.js"></script>
 </head>
 <body>
     <script>
